--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
+* {
+}
+
 body {
   background-color: #292524;
+  color: #fafaf9;
+  font-family: "Sono", sans-serif;
 }
 
 .fact-form {
@@ -17,7 +22,6 @@ h1 {
 .fact {
   font-size: 20px;
   line-height: 1.4;
-  font-family: "Sono", sans-serif;
   color: #fafaf9;
   background-color: #44403c;
 }
