--- a/style.css
+++ b/style.css
@@ -1,20 +1,29 @@
 * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
   background-color: #292524;
   color: #fafaf9;
   font-family: "Sono", sans-serif;
+  padding: 40px;
+}
+
+.header {
+  margin-bottom: 40px;
 }
 
 .fact-form {
   background-color: #44403c;
+  margin-bottom: 40px;
+  padding: 16px 40px;
 }
 
 h1 {
   font-size: 42px;
   text-transform: uppercase;
-  text-align: center;
   font-family: "Coiny", sans-serif;
   color: #fafaf9;
 }
@@ -24,6 +33,9 @@ h1 {
   line-height: 1.4;
   color: #fafaf9;
   background-color: #44403c;
+  margin-bottom: 16px;
+  padding: 16px 24px;
+  /* border: 4px solid red; */
 }
 
 .tag {
