--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
   background-color: #44403c;
   margin-bottom: 40px;
   padding: 16px 40px;
+  text-align: center;
 }
 
 h1 {
@@ -35,7 +36,6 @@ h1 {
   background-color: #44403c;
   margin-bottom: 16px;
   padding: 16px 24px;
-  /* border: 4px solid red; */
 }
 
 .tag {
@@ -43,6 +43,9 @@ h1 {
   font-size: 14px;
   font-family: "Coiny", sans-serif;
   color: #fafaf9;
+  padding-top: 3px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 ul {
