--- a/style.css
+++ b/style.css
@@ -20,6 +20,14 @@ body {
   justify-content: space-between;
 }
 
+.main {
+  display: grid;
+  grid-template-columns: 250px 1fr;
+  gap: 48px;
+}
+
+/* ELEMENTS */
+
 .logo {
   display: flex;
   align-items: center;
