22. Centering the App.

--- a/style.css
+++ b/style.css
@@ -8,9 +8,14 @@ body {
   background-color: #292524;
   color: #fafaf9;
   font-family: "Sono", sans-serif;
-  padding: 40px;
+  padding: 40px 64px;
 }
 
+/* MAIN LAYOUT */
+.container {
+  max-width: 1500px;
+  margin: 0 auto;
+}
 .header {
   margin-bottom: 40px;
   padding: 10px;
@@ -32,6 +37,11 @@ body {
   display: flex;
   align-items: center;
   gap: 16px;
+}
+
+.logo img {
+  width: 68px;
+  height: 68px;
 }
 
 .fact-form {
