--- a/src/style.css
+++ b/src/style.css
@@ -16,7 +16,12 @@ body {
 }
 
 /* MAIN LAYOUT */
-.container {
+/* .container {
+  max-width: 1500px;
+  margin: 0 auto;
+} */
+
+#root {
   max-width: 1500px;
   margin: 0 auto;
 }
