--- a/src/style.css
+++ b/src/style.css
@@ -134,6 +134,10 @@ h1 {
   background-color: #292423;
 }
 
+.vote-buttons button:disabled {
+  background-color: #44403c;
+}
+
 ul {
   list-style: none;
 }
