--- a/src/style.css
+++ b/src/style.css
@@ -8,11 +8,11 @@ body {
   background-color: #292524;
   color: #fafaf9;
   font-family: "Sono", sans-serif;
-  padding: 40px 64px;
+  padding: 48px 64px 0px;
 }
 
 .hidden {
-  display: None !important;
+  display: none !important;
 }
 
 .message {
@@ -23,15 +23,20 @@ body {
   margin-top: 24px;
 }
 
+.disputed {
+  color: #ef4444;
+  font-weight: 600;
+  margin-right: 10px;
+}
+
 /* MAIN LAYOUT */
 #root {
   max-width: 1500px;
   margin: 0 auto;
 }
+
 .header {
   margin-bottom: 40px;
-  padding: 10px;
-
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -41,12 +46,22 @@ body {
   display: grid;
   grid-template-columns: 250px 1fr;
   gap: 48px;
+
+  height: calc(100vh - 48px - 68px - 40px);
 }
 
 @media (max-width: 900px) {
   .main {
     grid-template-columns: 1fr;
+    /* Fixed in a video text overlay, to fix scrolling issue on small screens */
+    height: auto;
   }
+}
+
+section {
+  overflow: scroll;
+  overflow-x: hidden;
+  padding-bottom: 40px;
 }
 
 /* ELEMENTS */
@@ -66,7 +81,6 @@ h1 {
   font-size: 42px;
   text-transform: uppercase;
   font-family: "Coiny", sans-serif;
-  color: #fafaf9;
   line-height: 1;
   margin-top: 6px;
 }
@@ -78,7 +92,6 @@ h1 {
 .fact {
   font-size: 20px;
   line-height: 1.4;
-  color: #fafaf9;
   background-color: #44403c;
   margin-bottom: 16px;
   padding: 16px 24px;
@@ -102,7 +115,6 @@ h1 {
   text-transform: uppercase;
   font-size: 14px;
   font-family: "Coiny", sans-serif;
-  color: #fafaf9;
   padding-top: 3px;
   padding-left: 10px;
   padding-right: 10px;
@@ -131,7 +143,7 @@ h1 {
 }
 
 .vote-buttons button:hover {
-  background-color: #292423;
+  background-color: #292524;
 }
 
 .vote-buttons button:disabled {
@@ -238,32 +250,5 @@ ul {
   .fact-form input,
   .fact-form select {
     width: auto;
-  }
-}
-
-/* MOBILE DEVICES */
-@media (max-width: 900px) {
-  .main {
-    grid-template-columns: 1fr;
-    height: auto;
-  }
-}
-
-@media (max-width: 600px) {
-  #root {
-    padding: 24px;
-  }
-
-  .header {
-    flex-direction: column;
-    gap: 16px;
-  }
-
-  .fact-form {
-    padding: 16px;
-  }
-
-  .fact {
-    padding: 12px 16px;
   }
 }
